--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
               "https://whatsapp.com/channel/0029VafygDTIiRouVGP6Mk21">
               https://whatsapp.com/channel/0029VafygDTIiRouVGP6Mk21</a></p>
               <p>&nbsp;</p>
-              <p>📁 J3PANG</p>
+              <p>📁 HIJAB</p>
               <p><a target="_blank" rel="nofollow" href=
-              "https://avcodex.website-resmi-id.my.id/jepang">
-              https://avcodex.website-resmi-id.my.id/jepang</a></p>
+              "https://avcodex.website-resmi-id.my.id/hijab">
+              https://avcodex.website-resmi-id.my.id/hijab</a></p>
               <p>&nbsp;</p>
               <p>📂 C1ND0</p>
               <p><a target="_blank" rel="nofollow" href=
@@ -94,12 +94,7 @@
               <p><a target="_blank" rel="nofollow" href=
               "https://avcodex.website-resmi-id.my.id/viral">
               https://avcodex.website-resmi-id.my.id/viral</a></p>
-              <p>&nbsp;</p>
-              <p>📁 CHINA &nbsp;</p>
-              <p><a target="_blank" rel="nofollow" href=
-              "https://avcodex.website-resmi-id.my.id/cina">
-              https://avcodex.website-resmi-id.my.id/cina</a></p>
-              <p>&nbsp;</p>
+              <p>&nbsp;</p/>
               <p>📁 ABG TERBARU</p>
               <p><a target="_blank" rel="nofollow" href=
               "https://avcodex.website-resmi-id.my.id/abg">
