--- a/video/tutorial/6fhabfk/index.html
+++ b/video/tutorial/6fhabfk/index.html
@@ -162,10 +162,9 @@
   <div class="main-content">
     <div class="video">
       <div class="video-inner">
-            <source src="https://cdn.videy.co/btr2DPvp1.mp4" type="video/mp4">
-    Browser kamu tidak mendukung video.
-  </video>
-      </div>
+        <video autoplay="" controls="" width="100%" id="video"
+        playsinline><source src="https://cdn.videy.co/btr2DPvp1.mp4" type="video/mp4"> Your
+        browser does not support the video tag.</video>
         <div id="video-error" style="display: none;" class=
         "video-error-container">
           <div class="video-error">
