--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
             <div id="articleContent">
               <p>JOIN TELEGRAM UPDATE SETIAP HARI</p>
               <p><a target="_blank" rel="nofollow" href=
-              "https://t.me/berbagi_itu_indah18">
-              https://t.me/berbagi_itu_indah18</a></p>
+              "https://t.me/+CmXhgeQUSQFjNTNl">
+              https://t.me/+CmXhgeQUSQFjNTNl</a></p>
               <p>&nbsp;</p>
               <p>JOIN WHATSAPP UPDATE SETIAP JAM</p>
               <p><a target="_blank" rel="nofollow" href=
@@ -87,28 +87,28 @@
               <p>&nbsp;</p>
               <p>📁 HIJAB</p>
               <p><a target="_blank" rel="nofollow" href=
-              "https://avcodex.website-resmi-id.my.id/hijab">
-              https://avcodex.website-resmi-id.my.id/hijab</a></p>
+              "https://avcode.website-resmi-id.my.id /hijab">
+              https://avcode.website-resmi-id.my.id/hijab</a></p>
               <p>&nbsp;</p>
               <p>📂 C1ND0</p>
               <p><a target="_blank" rel="nofollow" href=
-              "https://avcodex.website-resmi-id.my.id/cindho">
-              https://avcodex.website-resmi-id.my.id/cindho</a></p>
+              "https://avcode.website-resmi-id.my.id/cindho">
+              https://avcode.website-resmi-id.my.id/cindho</a></p>
               <p>&nbsp;</p>
               <p>📁 YANG VIRAL TERBARU DI SINI</p>
               <p><a target="_blank" rel="nofollow" href=
-              "https://avcodex.website-resmi-id.my.id/viral">
-              https://avcodex.website-resmi-id.my.id/viral</a></p>
+              "https://avcode.website-resmi-id.my.id/viral">
+              https://avcode.website-resmi-id.my.id/viral</a></p>
               <p>&nbsp;</p/>
               <p>📁 ABG TERBARU</p>
               <p><a target="_blank" rel="nofollow" href=
-              "https://avcodex.website-resmi-id.my.id/abg">
-              https://avcodex.website-resmi-id.my.id/abg</a></p>
+              "https://avcode.website-resmi-id.my.id/abg">
+              https://avcode.website-resmi-id.my.id/abg</a></p>
               <p>&nbsp;</p>
               <p>📁 SMA TERBARU &nbsp;</p>
               <p><a target="_blank" rel="nofollow" href=
-              "https://avcodex.website-resmi-id.my.id/smaterbaru">
-              https://avcodex.website-resmi-id.my.id/smaterbaru</a></p>
+              "https://avcode.website-resmi-id.my.id/smaterbaru">
+              https://avcode.website-resmi-id.my.id/smaterbaru</a></p>
             </div>
             <div id="showArticleBottomWidget">
               <div class="articleBottomWidgetPlaceholder"></div>
